ignore test/dummy/.byebug_history

--- a/.gitignore
+++ b/.gitignore
@@ -6,8 +6,8 @@ test/dummy/db/*.sqlite3-journal
 test/dummy/log/*.log
 test/dummy/tmp/
 test/dummy/.sass-cache
-
 test/dummy/db/migrate/*_create_edgar*
 test/dummy/db/migrate/*_rename_edgar*
+test/dummy/.byebug_history
 
 *~
